--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
-    "name": "cli",
+    "name": "favs-cli",
     "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
+    "description": "Easily launch your favorite websites.",
+    "main": "main.js",
+    "files": [
+        "src/main.js"
+    ],
     "scripts": {
         "start": "node src/main.js"
     },
     "type": "module",
-    "keywords": [],
-    "author": "",
+    "bin": {
+        "favs": "src/main.js"
+    },
+    "keywords": [
+        "favs",
+        "shortcuts",
+        "favorites",
+        "bookmarks"
+    ],
+    "author": "Caleb Curry",
     "license": "ISC",
     "dependencies": {
         "better-sqlite3": "^8.3.0",
-        "command-exists": "^1.2.9",
         "dotenv": "^16.0.3",
-        "open": "^9.1.0",
-        "sqlite3": "^5.1.6"
+        "express": "^4.18.2",
+        "nodemon": "^2.0.22",
+        "open": "^9.1.0"
     }
 }
